otter/tests/ui/fail_return_not_encoder.stderr
error[E0277]: the trait bound `NotEncodable: Encoder` is not satisfied
  --> tests/ui/fail_return_not_encoder.rs:12:1
   |
12 | #[otter::nif]
   | ^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Encoder` is not implemented for `NotEncodable`
  --> tests/ui/fail_return_not_encoder.rs:10:1
   |
10 | struct NotEncodable;
   | ^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `Encoder`:
             ResourceArc<T>
             Result<T, Raised<'r>>
             Term<'b>
             TypedTerm<'b>
             otter::types::Atom
             otter::types::Binary<'b>
             otter::types::Bitstring<'b>
             otter::types::Float<'b>
           and $N others
note: required by a bound in `__otter_assert_encoder`
  --> tests/ui/fail_return_not_encoder.rs:12:1
   |
12 | #[otter::nif]
   | ^^^^^^^^^^^^^ required by this bound in `__otter_assert_encoder`
   = note: this error originates in the attribute macro `otter::nif` (in Nightly builds, run with -Z macro-backtrace for more info)
